opam-version: "2.0"
name: "cameleer"
synopsis: "A Deductive Verification Tool for OCaml Programs"
description: "A Deductive Verification Tool for OCaml Programs"
version: "0.1"
maintainer: "mjp.pereira@fct.unl.t"
authors: [
"Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/mariojppereira/cameleer"
dev-repo: "git://github.com/mariojppereira/cameleer"
bug-reports: "https://github.com/mariojppereira/cameleer/issues"
doc: "https://github.com/mariojppereira/cameleer/blob/master/README.md"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {>= "2.4.0"}
  "why3" {>= "1.4.0"}
  "why3-ide" {>= "1.4.0"}
  "gospel"
  "fmt"
  "ocaml" {>= "4.07"}
  "ppxlib" {>= "0.23.0"}
  "sexplib"
  "ppx_deriving"
  "ppx_sexp_conv"
  ("lablgtk3" & "lablgtk3-sourceview3")
]

conflicts: [
  "lablgtk" {< "2.14.2"}
]

pin-depends: [
  "gospel.dev" "git+https://github.com/ocaml-gospel/gospel.git#65e62964312f612e2207f4bda707de5f700179ac"
]
