(executable
  (libraries ppxlib gospel why3 cameleer)
  (name plugin_cameleer)
  (modes plugin)
  (embed_in_plugin_libraries
   compiler-libs.common ocaml-compiler-libs.shadow sexplib0
   ppxlib.stdppx ocaml-migrate-parsetree ppxlib.ast ppxlib fmt gospel cameleer))

(install
  (section lib_root)
  (files
    (plugin_cameleer.cmxs as why3/plugins/plugin_cameleer.cmxs))
  (package cameleer))
