(executable
  (libraries gospel why3 ocaml-compiler-libs.common)
  (name cameleer)
  (modes plugin)
  (link_flags -linkall)
  (embed_in_plugin_libraries gospel ocaml-compiler-libs.common))

(install
  (section lib_root)
  (files
    (cameleer.cmxs as why3/plugins/plugin_cameleer.cmxs))
  (package cameleer))