(executable
  (libraries gospel why3)
  (name plugin_cameleer)
  (modes plugin)
  (embed_in_plugin_libraries gospel))

(install
  (section lib_root)
  (files
    (plugin_cameleer.cmxs as why3/plugins/plugin_cameleer.cmxs))
  (package cameleer))

(install
  (section share_root)
  (files
    (ocamlstdlib.mlx as why3/stdlib/ocamlstdlib.mlw))
  (package cameleer))