(executable
  (libraries gospel why3)
  (name plugin_cameleer)
  (modes plugin)
  (embed_in_plugin_libraries
   compiler-libs.common  ocaml-compiler-libs.shadow
   ppxlib.stdppx ocaml-migrate-parsetree ppxlib.ast ppxlib fmt gospel))

(install
  (section lib_root)
  (files
    (plugin_cameleer.cmxs as why3/plugins/plugin_cameleer.cmxs))
  (package cameleer))

(install
  (section share_root)
  (files
    (ocamlstdlib.mlw as why3/stdlib/ocamlstdlib.mlw))
  (package cameleer))