opam-version: "2.0"
name: "vocal"
synopsis: "VOCaL -- The Verified OCaml Library"
description: "VOCaL -- The Verified OCaml Library"
version: "0.1"
maintainer: "Mário Pereira <mpereira@lri.fr>"
authors: [
"Arthur Charguéraud"
"Martin Clochard"
"Jean-Christophe Filliâtre"
"Léon Gondelman"
"Armaël Guéneau"
"Xavier Leroy"
"Cláudio Lourenço"
"Simão Melo de Sousa"
"Andrei Paskevich"
"Mário Pereira"
"François Pottier"
]
license: "MIT"
homepage: "https://vocal.lri.fr/"
dev-repo: "git://github.com/vocal-project/vocal"
bug-reports: "https://github.com/vocal-project/vocal/issues"
doc: "https://github.com/vocal-project/vocal/blob/master/README.md"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {>= "2.4.0"}
  "ocaml" {>= "4.07"}
]
